[tool.poetry]
name = "esa_tools"
version = "0.1.0"
description = ""
authors = ["t-sasatani <sasatani.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
piyo = "^1.1.2"
python-dotenv = "^1.0.1"
html2text = "^2024.2.26"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
esatools = "esa_tools.cli:cli"