[tool.poetry]
name = "esatools"
version = "0.1.0"
description = ""
authors = ["t-sasatani <sasatani.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
piyo = "^1.1.1"
python-dotenv = "^1.0.1"
html2text = "^2024.2.26"
click = "^8.1.8"
coloredlogs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
esatools = "esatools.cli:cli"